# backend

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: decorators.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ayureye_gen2/: asgi.py  settings.py  urls.py  views.py  wsgi.py
inference_api/: admin.py  detect.py  models.py  serializers.py  urls.py  views.py
inference_api/migrations/: 0001_initial.py  0002_rename_image_xrayprediction_original_image_and_more.py  0002_xrayimage_xrayprediction_delete_xraymodel.py  0003_alter_xrayprediction_original_image_and_more.py  0004_alter_predictedxrayimage_diagnosing_doctor_and_more.py  0005_alter_xrayprediction_original_image_and_more.py  0006_alter_xrayprediction_predicted_image.py
tests/: accounts_test.rest
